# CADExchanger_CPP_Curves_Test

./: CMakeLists.txt  README.md
include/: curvs.h  my_functions.h
libs/: curvs.exp  curvs.ilk  curvs.lib  curvslib.lib
libs/include/: curvs.h  curvs_global.h  my_functions.h
src/: curvs.cpp  main.cpp
